[package]
name = "wiinote"
version = "0.1.0"
authors = ["Hugo Manrique <cargo@hugmanrique.me>"]
edition = "2021"
description = "Use a Wii Remote as a slide clicker"
license = "MIT"
keywords = ["wiimote", "keynote", "clicker"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "3.1", features = ["derive"] }
futures-util = "0.3"
num-traits = "0.2"
tokio = { version = "1.19", features = ["macros", "rt", "time"] }
# todo: uinput-tokio errors don't implement the std:error::Error trait,
#       so handling results is painful. Use the sync version for now.
uinput = "0.1"
xwiimote = { path = "../xwiimote", version = "0.2" }